--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
           <div class="column">
             <div class="member" ">
-              <img src="img/Rishit.jpeg" class="img-fluid" >
+              <img src="img/Rishit1.jpeg" class="img-fluid" >
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Rishit Agarwal</h4>
