--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
           <div class=""  >
             <h4>Contact Us</h4>
             <p>
-             Rishit Agarwalt <br>
+             Rishit Agarwal <br>
              Amity International School <br>
              Sector-46 Gurugram <br>
              
