--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                We also thank all our teachers for helping and guiding us throughout. </p>
           </div>
 
-          <div class=""  >
+          <div id="contact" >
             <h4>Contact Us</h4>
             <p>
              Rishit Agarwal <br>
