--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
     Footer
   ============================-->
   
-  <footer id="footer">
+  <footer id="footer" id="contact">
     <div class="footer-top">
       <div class="container">
         <div class="row " >
@@ -363,7 +363,7 @@
                We also thank all our teachers for helping and guiding us throughout. </p>
           </div>
 
-          <div id="contact" >
+          <div  >
             <h4>Contact Us</h4>
             <p>
              Rishit Agarwal <br>
