--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
     Footer
   ============================-->
   
-  <footer id="footer" id="contact">
+  <footer id="contact">
     <div class="footer-top">
       <div class="container">
         <div class="row " >
