--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <li><a href="#about">Introduction</a></li>
           <li><a href="#services">Applications</a></li>
           <li><a href="#team">Team</a></li>
-          <li><a href="#footer">Contact Us</a></li>
+          <li><a href="#contact">Contact Us</a></li>
 
       </nav><!-- .main-nav -->
       
@@ -353,7 +353,7 @@
   ============================-->
   
   <footer id="footer">
-    <div class="footer-top">
+    <div class="footer-top" id="contact">
       <div class="container">
         <div class="row " >
 
