--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
       <div class="container">
 
         <header class="section-header">
-          <h3>SOME APPLICATIONS OF NANOTECHNOLGY</h3>
-          <p>Nanotechnology and nanomaterials can be applied in all kinds of industrial sectors. They are usually found in these areas:</p>
+          <h3>OUR GOALS</h3>
         </header>
 
         <div class="row">
@@ -151,16 +150,21 @@
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"></div>
-              <h4 class="title"><a href="">ELECTRONOCS</a></h4>
-              <p class="description">Carbon nanotubes are close to replacing silicon as a material for making smaller, faster and more efficient microchips and devices, as well as lighter, more conductive and stronger quantum nanowires. Graphene's properties make it an ideal candidate for the development of flexible touchscreens.</p>
+              <h4 class="title"><a href="">Building Awareness</a></h4>
+              <p class="description">
+                                     Creating initial awareness of the brand or company is very vital for a companies growth. So our prior focus would be that. Our initial goal is to achieve brand awareness of 10% in the local population in stage of first 6 months . We would wish to do so through advertising and measure the results through marketing research surveys.
+
+                                    </p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"></div>
-              <h4 class="title"><a href="">BIOMEDICINE</a></h4>
-              <p class="description">The properties of some nanomaterials make them ideal for improving early diagnosis and treatment of neurodegenerative diseases or cancer. They are able to attack cancer cells selectively without harming other healthy cells. Some nanoparticles have also been used to enhance pharmaceutical products such as sunscreen.
-              </p>
+              <h4 class="title"><a href="">  Establishing Customer Trust</a></h4>
+              <p class="description">
+                                    We would give few trials distribute fliers, give ads in newspaper offer special deals on various products. We would also keep our product at cheap cost thus making it suitable for masses to use our product. This development of customer base would in future result in repeated sales The customers who would like our product will come back and also spread awareness.
+
+                                    </p>
             </div>
           </div>
 
