--- a/index.html
+++ b/index.html
@@ -171,16 +171,23 @@
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"></div>
-              <h4 class="title"><a href="">ENERGY</a></h4>
-              <p class="description">A new semiconductor makes it possible to manufacture solar panels that double the amount of sunlight converted into electricity. Nanotechnology also lowers costs, produces stronger and lighter wind turbines, improves fuel efficiency and, thanks to the thermal insulation of some nanocomponents, can save energy.</p>
+              <h4 class="title"><a href="">Sustainability</a></h4>
+              <p class="description">
+                                    This allows for ensuring sustainability at the grass-roots level because most people will only pay for the betterment of the planet if they receive firsthand, direct and personal gains as well
+Our product will target households and organizations that are committed to help build a better tomorrow. Our product acts as the cross between potable water purification and micro-plastic filtration.
+
+                                    </p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"></div>
-              <h4 class="title"><a href="">ENVIRONMENT</a></h4>
-              <p class="description">Air purification with ions, wastewater purification with nanobubbles or nanofiltration systems for heavy metals are some of its environmentally-friendly applications. Nanocatalysts are also available to make chemical reactions more efficient and less polluting.</p>
-            </div>
+              <h4 class="title"><a href="">Best Quality</a></h4>
+              <p class="description">
+                                    Provide consumers with as good as quality micro filters. To increase utilization of Ecolife products by at least 10% of local population.
+
+                                    </p>
+                                    </div>
           </div>
 
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
