--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <!-- =======================================================
     Theme Name: NewBiz
-    Theme URL: https://bootstrapmade.com/newbiz-bootstrap-business-template/
+    Theme URL: https://boottrapmade.com/newbiz-bootstrap-business-template/
     Author: BootstrapMade.com
     License: https://bootstrapmade.com/license/
   ======================================================= -->
