--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
         <ul>
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">Introduction</a></li>
-          <li><a href="#services">Applications</a></li>
-          <li><a href="#team">Team</a></li>
+          <li><a href="#services">Goals</a></li>
+          <li><a href="#team">Mission & Vision</a></li>
+          
           <li><a href="#contact">Contact Us</a></li>
 
       </nav><!-- .main-nav -->
