--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta content="" name="keywords">
   <meta content="" name="description">
 
-  <!-- Favicons ->
+  <!- Favicons ->
   
 
   <!-- Google Fonts -->
