--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">Introduction</a></li>
           <li><a href="#services">Goals</a></li>
-          <li><a href="#team">Mission & Vision</a></li>
-          
+          <li><a href="#why-us">Mission & Vision</a></li>
+          <li><a href="#team">Team</a></li>
           <li><a href="#contact">Contact Us</a></li>
 
       </nav><!-- .main-nav -->
