--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NanoFY </title>
+  <title>BIOLIFE </title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -82,8 +82,11 @@
       <div class="container">
 
         <header class="section-header">
-          <h3>About Nanotechnology</h3>
-          <p>Nanotechnology is science, engineering, and technology conducted at the nanoscale, which is about 1 to 100 nanometers. Nanoscience and nanotechnology are the study and application of extremely small things and can be use</p>
+          <h3>About BioLife</h3>
+          <p>
+           BIOLife is a Water Purifier product based compant that aims at making highest quality Water Purifiers in the market to provide pure, healthy organic water to our customers.
+We use the finest quality of water filtration units. We believe that filtered water should be used as it improves everyday lives of human , animal and plants. 
+          </p>
         </header>
 
         <div class="row about-container">
