--- a/index.html
+++ b/index.html
@@ -88,13 +88,14 @@ We use the finest quality of water filtration units. We believe that filtered wa
           </p>
         </header>
 
-        <div class="row about-container">
+        <div>
           <h3> <strong>
               Our Technology
             </strong>
-            </h3> <br>
+            </h3> 
+          <br>
 
-          <div class="col-lg-6 content order-lg-1">
+          <div>
             <h3> <strong>
               Granular Activated Carbon (GAC) and carbon block
             </strong>
