--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
           <li class="active"><a href="#intro">Home</a></li>
-          <li><a href="#about">Introduction</a></li>
+          <li><a href="#intro">Introduction</a></li>
+          <li><a href="#tech">Technology</a></li>
           <li><a href="#services">Goals</a></li>
           <li><a href="#why-us">Mission & Vision</a></li>
           <li><a href="#team">Team</a></li>
@@ -73,7 +74,7 @@
     <!--==========================
       About Us Section
     ============================-->
-    <section id="about">
+    <section id="tech">
       <div class="container">
 
         <header class="section-header">
