--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ We use the finest quality of water filtration units. We believe that filtered wa
           </div>
 
           <div class="col-lg-6 background order-lg-2 order-1 wow fadeInUp">
-            <img src="img/pic1.jpg" class="img-fluid" width=400px" height="400px" alt="">
+            <img src="pic1.png" class="img-fluid" width=400px" height="400px" alt="">
           </div>
         </div>
                                                                                         
@@ -136,7 +136,7 @@ We use the finest quality of water filtration units. We believe that filtered wa
 
         <div class="row about-extra">
           <div class="col-lg-6 wow fadeInUp">
-            <img src="img/pic2.jpg" class="img-fluid" width="400px" height="400px" alt="">
+            <img src="pic2.png" class="img-fluid" width="400px" height="400px" alt="">
           </div>
           <div class="col-lg-6 wow fadeInUp pt-5 pt-lg-0">
             <h4>Stages of Filtration.</h4>
@@ -173,7 +173,7 @@ We use the finest quality of water filtration units. We believe that filtered wa
           </div>
 
           <div class="col-lg-6 background order-lg-2 order-1 wow fadeInUp">
-            <img src="img/pic3.jpg" class="img-fluid" width=400px" height="400px" alt="">
+            <img src="pic3.jpg" class="img-fluid" width=400px" height="400px" alt="">
           </div>
         </div>
 
