--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@ We use the finest quality of water filtration units. We believe that filtered wa
               <div class="icon"></div>
               <h4 class="title"><a href="">Sustainability</a></h4>
               <p class="description">
-                                    This allows for ensuring sustainability at the grass-roots level because most people will only pay for the betterment of the planet if they receive firsthand, direct and personal gains as well
-Our product will target households and organizations that are committed to help build a better tomorrow. Our product acts as the cross between potable water purification and micro-plastic filtration.
+                                    This allows for ensuring sustainability at the grass-roots level. Our product targets households and organizations that are committed to help build a better tomorrow. Our product acts as the cross between potable water purification and micro-plastic filtration.
 
                                     </p>
             </div>
