--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ We use the finest quality of water filtration units. We believe that filtered wa
             <img src="pic2.png" class="img-fluid" width="400px" height="400px" alt="">
           </div>
           <div class="col-lg-6 wow fadeInUp pt-5 pt-lg-0">
-            <h4>Stages of Filtration.</h4>
+            <h3> <strong>Stages of Filtration </h3> </strong>
             <p>
                                                          
             <ul type="circle">
