--- a/index.html
+++ b/index.html
@@ -328,11 +328,11 @@ At BIOLIFE we believe that clean water should be a human right. That’s why we 
 
           <div class="column">
             <div class="member" ">
-              <img src="img/Rishit1.jpeg" class="img-fluid" >
+              <img src="akriti.jpeg" class="img-fluid" >
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Rishit Agarwal</h4>
-                  <span>Team Member</span>
+                  <h4>Akriti Agarwal</h4>
+                  <span>19BCE2369</span>
                 </div>
               </div>
             </div>
@@ -340,11 +340,11 @@ At BIOLIFE we believe that clean water should be a human right. That’s why we 
 
           <div class="column">
             <div class="member">
-              <img src="img/P.jpeg" class="img-fluid" >
+              <img src="shraddha.jpeg" class="img-fluid" >
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Pari Mahajan </h4>
-                  <span>Team Leader</span>
+                  <h4>Shraddha manmode  </h4>
+                  <span>18BCE2123</span>
                   
                 </div>
               </div>
@@ -353,11 +353,11 @@ At BIOLIFE we believe that clean water should be a human right. That’s why we 
 
           <div class="column">
             <div class="member">
-              <img src="img/L.jpeg" class="img-fluid" >
+              <img src="shubhjpeg" class="img-fluid" >
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Lakshmi Vaishnavi Kalluri</h4>
-                  <span>Team Member</span>
+                  <h4>Shubh Vagadia</h4>
+                  <span>19BCE0844</span>
                 </div>
               </div>
             </div>
