--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ At BIOLIFE we believe that clean water should be a human right. That’s why we 
 
           <div class="column">
             <div class="member">
-              <img src="shubhjpeg" class="img-fluid" >
+              <img src="shubh.jpeg" class="img-fluid" >
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Shubh Vagadia</h4>
