--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ At BIOLIFE we believe that clean water should be a human right. That’s why we 
 
           <div class="column">
             <div class="member" ">
-              <img src="akriti.jpeg" class="img-fluid" >
+              <img src="akriti1.jpeg" class="img-fluid" >
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Akriti Agarwal</h4>
