--- a/index.html
+++ b/index.html
@@ -365,11 +365,11 @@ At BIOLIFE we believe that clean water should be a human right. That’s why we 
 
           <div class=" column">
             <div class="member">
-              <img src="img/V.jpeg" class="img-fluid" >
+              <img src="dedefo.jpeg" class="img-fluid" >
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Vaibhav Yadav</h4>
-                  <span>Team Member</span>
+                  <h4>Dedefo Kedir Abdela</h4>
+                  <span>18BCL0251</span>
                 </div>
               </div>
             </div>
