--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ At BIOLIFE we believe that clean water should be a human right. That’s why we 
 
           <div class=" column">
             <div class="member">
-              <img src="dedefo.jpeg" class="img-fluid" >
+              <img src="dedefo.png" class="img-fluid" >
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Dedefo Kedir Abdela</h4>
@@ -377,11 +377,11 @@ At BIOLIFE we believe that clean water should be a human right. That’s why we 
 
           <div class=" column">
             <div class="member">
-              <img src="img/Raihan.jpeg" class="img-fluid" >
+              <img src="himanshu.png" class="img-fluid" >
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Raihan Khayer</h4>
-                  <span>Team Member</span>
+                  <h4>Himanshu Goyal</h4>
+                  <span>19BCE0472</span>
                 </div>
               </div>
             </div>
