--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ At BIOLIFE we believe that clean water should be a human right. That’s why we 
 
           <div class="column">
             <div class="member" ">
-              <img src="akriti1.jpeg" class="img-fluid" >
+              <img src="akriti2.jpeg" class="img-fluid" >
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Akriti Agarwal</h4>
@@ -365,7 +365,7 @@ At BIOLIFE we believe that clean water should be a human right. That’s why we 
 
           <div class=" column">
             <div class="member">
-              <img src="dedefo.png" class="img-fluid" >
+              <img src="dedefo1.png" class="img-fluid" >
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Dedefo Kedir Abdela</h4>
