--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
-  <!-- Main Stylesheet File -->
+  <!-- Main Stylt File -->
   <link href="css/style.css" rel="stylesheet">
 
   <!-- =======================================================
