--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
 
-  <!-- Bootse -->
+  <!--otse -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!--Liies CSS Files -->
