--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
         <h2>BIOLIFE</h2>
         
         <div>
-          <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=dqBGjZPQbUGle4aSzeE7-B0qDGGL0DJJjyd-EiylCahUQzBZU1VUUU9VNEI3VFRXNTQzVFNDQUZERy4u" class="btn-services scrollto">Help us by Filling the SURVEY</a>
+         <!-- #intro -- <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=dqBGjZPQbUGle4aSzeE7-B0qDGGL0DJJjyd-EiylCahUQzBZU1VUUU9VNEI3VFRXNTQzVFNDQUZERy4u" class="btn-services scrollto">Help us by Filling the SURVEY</a>
+        -->
         </div>
       </div>
       </centre>
